# robospect

./: INSTALL  Makefile.am  README  configure.ac
doc/: QUICKSTART
src/: Makefile.am  config.c  config.h.in  fileio.c  gsllm-multigauss.c  linefinder.c  main.c  math.c  model.c  nlls-gaussfit.c  nlls-multigauss.c  noise.c  robo.h  rv.c  spectra.c  vectors.c
src/fileio/: input_data.c  input_fitsWCS.c  input_lines.c  output_lines.c  output_logs.c  output_plots.c  output_spectra.c
src/math/: gaussian_model.c  hjerting_model.c  humlicek_model.c  lorentzian_model.c  nlls-multifunction.c  planck_model.c  pseudovoigt_model.c  skewgauss_model.c
src/models/: continuum_blackbody.c  continuum_boxcar.c  continuum_bspline.c  continuum_devel.c  continuum_fft.c  continuum_histogram.c  continuum_logboxcar.c  continuum_null.c  continuum_peak_boxcar.c  continuum_penalized_spline.c  continuum_powerlaw.c  continuum_robust_linear.c  deblend_nlls.c  line_fixedmean_gaussian.c  line_gaussian.c  line_isolated_gaussian.c  line_nonparametric.c  line_null.c  line_pre.c  line_threestage_gaussian.c  line_twostage_gaussian.c  line_twostage_sticky_gaussian.c
utilities/: lines2moog.pl  robo_decode_flags.pl  robo_simulate_spectra.pl
